--- a/test/Makefile
+++ b/test/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ssnowbir <ssnowbir@student.42.fr>          +#+  +:+       +#+         #
+#    By: gbroccol <gbroccol@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/01 11:32:12 by gbroccol          #+#    #+#              #
-#    Updated: 2021/03/11 15:40:29 by ssnowbir         ###   ########.fr        #
+#    Updated: 2021/03/24 17:19:03 by gbroccol         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,10 +20,10 @@ FLAGS =		-Wall -Werror -Wextra -g -std=c++98
 
 SRCS =		main.cpp \
 			list_test.cpp \
+			vector_test.cpp \
 			# map_test.cpp \
 			# queue_test.cpp \
-			# stack_test.cpp \
-			# vector_test.cpp \
+			# stack_test.cpp 
 			
 OBJ =		$(SRCS:.cpp=.o)
 
