--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@
 #    By: gbroccol <gbroccol@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/01 11:32:12 by gbroccol          #+#    #+#              #
-#    Updated: 2021/03/24 17:19:03 by gbroccol         ###   ########.fr        #
+#    Updated: 2021/03/25 16:09:16 by gbroccol         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ FLAGS =		-Wall -Werror -Wextra -g -std=c++98
 SRCS =		main.cpp \
 			list_test.cpp \
 			vector_test.cpp \
-			# map_test.cpp \
+			map_test.cpp \
 			# queue_test.cpp \
 			# stack_test.cpp 
 			
